Refactored the background queue processing code to push registration confirmation to the forefront otherwise the queue is blocked for processing. Included peer presence as part of the signaling server.

--- a/ChatterBox.Server/ChatterBox.Server.csproj
+++ b/ChatterBox.Server/ChatterBox.Server.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Domain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisteredClientMessageQueueItem.cs" />
     <Compile Include="UnregisteredConnection.cs" />
   </ItemGroup>
   <ItemGroup>
