--- a/ChatterBox.Client.Win8.1/ChatterBox.Client.Win8.1.csproj
+++ b/ChatterBox.Client.Win8.1/ChatterBox.Client.Win8.1.csproj
@@ -144,6 +144,10 @@
       <Project>{ca0c8677-1a3c-4418-997d-1bb450eaa6d0}</Project>
       <Name>ChatterBox.Client.Tasks.Signaling.Win8.1</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ChatterBox.Common.Communication\ChatterBox.Common.Communication.csproj">
+      <Project>{5ee2034e-0977-42b0-8f9d-5f65bdaccff4}</Project>
+      <Name>ChatterBox.Common.Communication</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="..\ChatterBox.Client.Presentation.Shared\ChatterBox.Client.Presentation.Shared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
