--- a/ChatterBox.Server/ChatterBox.Server.csproj
+++ b/ChatterBox.Server/ChatterBox.Server.csproj
@@ -76,7 +76,7 @@
     </Content>
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="..\ChatterBox.Shared.Communication\ChatterBox.Shared.Communication.projitems" Label="Shared" />
+  <Import Project="..\ChatterBox.Common.Communication.Shared\ChatterBox.Common.Communication.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
