--- a/ChatterBox.Client.Universal/ChatterBox.Client.Universal.csproj
+++ b/ChatterBox.Client.Universal/ChatterBox.Client.Universal.csproj
@@ -126,6 +126,10 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ChatterBox.Client.Notifications\ChatterBox.Client.Notifications.csproj">
+      <Project>{d33cff24-8fae-4637-b4e5-4c7edb972a64}</Project>
+      <Name>ChatterBox.Client.Notifications</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ChatterBox.Client.Settings\ChatterBox.Client.Settings.csproj">
       <Project>{EB86884C-1E6E-4E5E-ADE9-1A4EBF44F5ED}</Project>
       <Name>ChatterBox.Client.Settings</Name>
