--- a/ChatterBox.Client.Notifications/ChatterBox.Client.Notifications.csproj
+++ b/ChatterBox.Client.Notifications/ChatterBox.Client.Notifications.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>12.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A286773B-AC8E-4990-ABDF-4017CC9FF29D}</ProjectGuid>
+    <ProjectGuid>{D33CFF24-8FAE-4637-B4E5-4C7EDB972A64}</ProjectGuid>
     <OutputType>winmdobj</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChatterBox.Client.Signaling</RootNamespace>
-    <AssemblyName>ChatterBox.Client.Signaling</AssemblyName>
+    <RootNamespace>ChatterBox.Client.Notifications</RootNamespace>
+    <AssemblyName>ChatterBox.Client.Notifications</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,27 +35,15 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
-    <ProjectReference Include="..\ChatterBox.Client.Notifications\ChatterBox.Client.Notifications.csproj">
-      <Project>{D33CFF24-8FAE-4637-B4E5-4C7EDB972A64}</Project>
-      <Name>ChatterBox.Client.Notifications</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ChatterBox.Client.Settings\ChatterBox.Client.Settings.csproj">
-      <Project>{EB86884C-1E6E-4E5E-ADE9-1A4EBF44F5ED}</Project>
-      <Name>ChatterBox.Client.Settings</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ChatterBox.Common.Communication\ChatterBox.Common.Communication.csproj">
-      <Project>{5ee2034e-0977-42b0-8f9d-5f65bdaccff4}</Project>
-      <Name>ChatterBox.Common.Communication</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <TargetPlatform Include="Windows, Version=8.1" />
     <TargetPlatform Include="WindowsPhoneApp, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ToastNotificationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <Import Project="..\ChatterBox.Client.Signaling.Shared\ChatterBox.Client.Signaling.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
