--- a/ChatterBox.Client.Win8dot1/ChatterBox.Client.Win8dot1.csproj
+++ b/ChatterBox.Client.Win8dot1/ChatterBox.Client.Win8dot1.csproj
@@ -33,7 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Helpers\SignalingTaskHelper.cs" />
+    <Compile Include="Helpers\SignalingSocketService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -63,10 +63,6 @@
     <ProjectReference Include="..\ChatterBox.Client.Signaling\ChatterBox.Client.Signaling.csproj">
       <Project>{a286773b-ac8e-4990-abdf-4017cc9ff29d}</Project>
       <Name>ChatterBox.Client.Signaling</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ChatterBox.Client.Tasks.Signaling.Win8dot1\ChatterBox.Client.Tasks.Signaling.Win8dot1.csproj">
-      <Project>{347d730c-65ac-495a-929c-4232d8e19492}</Project>
-      <Name>ChatterBox.Client.Tasks.Signaling.Win8dot1</Name>
     </ProjectReference>
     <ProjectReference Include="..\ChatterBox.Common.Communication\ChatterBox.Common.Communication.csproj">
       <Project>{5ee2034e-0977-42b0-8f9d-5f65bdaccff4}</Project>
